@@ -6,9 +6,6 @@ package com.microsoft.typespec.http.client.generator.mgmt.template;
 import com.azure.core.credential.AccessToken;
 import com.azure.core.http.HttpMethod;
 import com.azure.core.http.HttpResponse;
-import com.azure.core.management.profile.AzureProfile;
-import com.azure.json.JsonProviders;
-import com.azure.json.JsonWriter;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ClassType;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ClientMethod;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.IType;
@@ -18,15 +15,17 @@ import com.microsoft.typespec.http.client.generator.core.model.javamodel.JavaFil
 import com.microsoft.typespec.http.client.generator.core.template.IJavaTemplate;
 import com.microsoft.typespec.http.client.generator.core.template.example.ModelExampleWriter;
 import com.microsoft.typespec.http.client.generator.core.util.CodeNamer;
+import com.microsoft.typespec.http.client.generator.mgmt.model.FluentType;
 import com.microsoft.typespec.http.client.generator.mgmt.model.clientmodel.examplemodel.FluentMethodMockUnitTest;
 import com.microsoft.typespec.http.client.generator.mgmt.util.FluentUtils;
+import io.clientcore.core.serialization.json.JsonWriter;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -56,13 +55,12 @@ public class FluentMethodMockTestTemplate
 
     @Override
     public void write(ClientMethodInfo info, JavaFile javaFile) {
-        Set<String> imports
-            = new HashSet<>(Arrays.asList(AccessToken.class.getName(), ClassType.HTTP_CLIENT.getFullName(),
-                ClassType.HTTP_HEADERS.getFullName(), ClassType.HTTP_REQUEST.getFullName(),
-                HttpResponse.class.getName(), "com.azure.core.test.http.MockHttpResponse",
-                ClassType.AZURE_CLOUD.getFullName(), AzureProfile.class.getName(), "org.junit.jupiter.api.Test",
-                ByteBuffer.class.getName(), Mono.class.getName(), Flux.class.getName(),
-                StandardCharsets.class.getName(), OffsetDateTime.class.getName()));
+        Set<String> imports = new HashSet<>(List.of(AccessToken.class.getName(), ClassType.HTTP_CLIENT.getFullName(),
+            ClassType.HTTP_HEADERS.getFullName(), ClassType.HTTP_REQUEST.getFullName(), HttpResponse.class.getName(),
+            "com.azure.core.test.http.MockHttpResponse", ClassType.AZURE_CLOUD.getFullName(),
+            FluentType.AZURE_PROFILE.getFullName(), "org.junit.jupiter.api.Test", ByteBuffer.class.getName(),
+            Mono.class.getName(), Flux.class.getName(), StandardCharsets.class.getName(),
+            OffsetDateTime.class.getName()));
 
         String className = info.className;
         FluentMethodMockUnitTest fluentMethodMockUnitTest = info.fluentMethodMockUnitTest;
@@ -108,7 +106,7 @@ public class FluentMethodMockTestTemplate
         String verificationObjectName = fluentMethodMockUnitTest.getResponseVerificationVariableName();
         String jsonStr;
         try (ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
-            JsonWriter jsonWriter = JsonProviders.createWriter(outputStream)) {
+            JsonWriter jsonWriter = JsonWriter.toStream(outputStream)) {
             jsonWriter.writeUntyped(jsonObject).flush();
             jsonStr = outputStream.toString(StandardCharsets.UTF_8);
         } catch (IOException e) {
