@@ -4,10 +4,7 @@
 package com.microsoft.typespec.http.client.generator.mgmt.template;
 
 import com.azure.core.http.HttpHeaders;
-import com.azure.core.http.HttpResponse;
 import com.azure.core.http.rest.Response;
-import com.azure.core.management.exception.ManagementError;
-import com.azure.core.management.exception.ManagementException;
 import com.azure.core.management.polling.PollResult;
 import com.azure.core.management.polling.PollerFactory;
 import com.azure.core.util.Context;
@@ -21,6 +18,7 @@ import com.microsoft.typespec.http.client.generator.core.model.clientmodel.Class
 import com.microsoft.typespec.http.client.generator.core.model.javamodel.JavaClass;
 import com.microsoft.typespec.http.client.generator.core.template.ServiceClientTemplate;
 import com.microsoft.typespec.http.client.generator.core.template.prototype.MethodTemplate;
+import com.microsoft.typespec.http.client.generator.mgmt.model.FluentType;
 import com.microsoft.typespec.http.client.generator.mgmt.util.FluentUtils;
 import java.io.IOException;
 import java.lang.reflect.Type;
@@ -29,6 +27,7 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -101,9 +100,9 @@ public class FluentServiceClientTemplate extends ServiceClientTemplate {
                 .build();
 
             MethodTemplate getLroFinalResultOrErrorMethod = MethodTemplate.builder()
-                .imports(Arrays.asList(PollerFlux.class.getName(), PollResult.class.getName(), Mono.class.getName(),
-                    AsyncPollResponse.class.getName(), ManagementError.class.getName(),
-                    ManagementException.class.getName(), HttpResponse.class.getName(),
+                .imports(List.of(PollerFlux.class.getName(), PollResult.class.getName(), Mono.class.getName(),
+                    AsyncPollResponse.class.getName(), FluentType.MANAGEMENT_ERROR.getFullName(),
+                    FluentType.MANAGEMENT_EXCEPTION.getFullName(), ClassType.HTTP_RESPONSE.getFullName(),
                     LongRunningOperationStatus.class.getName(), SerializerEncoding.class.getName(),
                     IOException.class.getName(),
                     // below import is actually used in HttpResponseImpl
@@ -151,33 +150,24 @@ public class FluentServiceClientTemplate extends ServiceClientTemplate {
                             "this.responseBody = responseBody == null ? null : responseBody.getBytes(StandardCharsets.UTF_8);");
                     });
 
-                block.publicMethod("int getStatusCode()", code -> {
-                    code.methodReturn("statusCode");
-                });
+                block.publicMethod("int getStatusCode()", code -> code.methodReturn("statusCode"));
 
-                block.publicMethod("String getHeaderValue(String s)", code -> {
-                    code.methodReturn("httpHeaders.getValue(HttpHeaderName.fromString(s))");
-                });
+                block.publicMethod("String getHeaderValue(String s)",
+                    code -> code.methodReturn("httpHeaders.getValue(HttpHeaderName.fromString(s))"));
 
-                block.publicMethod("HttpHeaders getHeaders()", code -> {
-                    code.methodReturn("httpHeaders");
-                });
+                block.publicMethod("HttpHeaders getHeaders()", code -> code.methodReturn("httpHeaders"));
 
-                block.publicMethod("Flux<ByteBuffer> getBody()", code -> {
-                    code.methodReturn("Flux.just(ByteBuffer.wrap(responseBody))");
-                });
+                block.publicMethod("Flux<ByteBuffer> getBody()",
+                    code -> code.methodReturn("Flux.just(ByteBuffer.wrap(responseBody))"));
 
-                block.publicMethod("Mono<byte[]> getBodyAsByteArray()", code -> {
-                    code.methodReturn("Mono.just(responseBody)");
-                });
+                block.publicMethod("Mono<byte[]> getBodyAsByteArray()",
+                    code -> code.methodReturn("Mono.just(responseBody)"));
 
-                block.publicMethod("Mono<String> getBodyAsString()", code -> {
-                    code.methodReturn("Mono.just(new String(responseBody, StandardCharsets.UTF_8))");
-                });
+                block.publicMethod("Mono<String> getBodyAsString()",
+                    code -> code.methodReturn("Mono.just(new String(responseBody, StandardCharsets.UTF_8))"));
 
-                block.publicMethod("Mono<String> getBodyAsString(Charset charset)", code -> {
-                    code.methodReturn("Mono.just(new String(responseBody, charset))");
-                });
+                block.publicMethod("Mono<String> getBodyAsString(Charset charset)",
+                    code -> code.methodReturn("Mono.just(new String(responseBody, charset))"));
             });
         }
     }
